  UiValues.TextUiValue fires change event on focus lost only if the focus event isn't temporary
  FilteredTablePanelTest, some additions
  FilteredTablePanel, minor refactoring to accomodate the above
  UiUtilTest, some additions
  DefaultEntityConnection.selectRowCount() bug fixed, did not work correctly for entities defined with a select query
  DefaultEntityConnectionTest.rowCount() improved due to the above
  UtilTest, some additions
  Unit test coverage improved
  Javadoc improvements
  AbstractFilteredTableModel.filterContents() bug fixed, it now resets the filtering if filterCriteria is set to null
  Unit test coverage improved
  UiUtil.selectFilesOrDirectories() added
  UiUtil.selectFilesOrDirectories() bug fixed
  Util.getGetMethod() and getSetMethod() overloaded with Class parameter
  Util.unwrapAndLog(), fixed possible heap pollution
  DefaultRemoteEntityConnection, removed redundant throws clauses
  EntityUtil.EntityBeanMapper improved, exceptions thrown earlier in case of invalid methods
  EntityImpl, minor refactoring
  FilteredTableColumnModel.getFilterModel() renamed to getColumnFilterModel()
  EntityEditModel.refreshEntity() added, tested
  EntityCriteriaUtil, some refactoring of getConditionString()
  Code cleanup
0.8.6
  Demo deployment updated according to latest java security requirements
  EntityJSONParserTest.entity() improved, no longer depends on the order of values (failed in Java 8)
  DefaultEntityComboBoxModel no longer overrides vetoSelectionChange() with a final method
  DefaultFilteredComboBoxModel.vetoSelectionChange() renamed to allowSelectionChange() for consistency
  LoginProxy.doLogout() added
  EntityConnectionProviders.createConnectionProvider() overloaded with clientID parameter
  Configuration.SERVER_CLIENT_CONNECTION_TIMEOUT added, used in EntityConnectionServer
  EntityConnectionServerAdminImpl, minor refactoring
  Configuration bug fixed, now initializes SERVER_CLIENT_CONNECTION_TIMEOUT correctly