@@ -32,6 +32,7 @@ import javax.swing.JFrame;
 import javax.swing.JList;
 import javax.swing.JOptionPane;
 import javax.swing.JPanel;
+import javax.swing.JProgressBar;
 import javax.swing.JScrollBar;
 import javax.swing.JScrollPane;
 import javax.swing.JTextField;
@@ -1488,6 +1489,52 @@ public final class UiUtil {
    */
   public static void setClipboard(final String string) {
     Toolkit.getDefaultToolkit().getSystemClipboard().setContents(new StringSelection(string), null);
+  }
+
+  /**
+   * Runs the given Runnable instance while displaying a simple indeterminate progress bar
+   * @param dialogParent the dialog parent
+   * @param progressBarTitle the progress bar title
+   * @param successMessage the message to display after the task has run
+   * @param successTitle the title for the success message dialog
+   * @param failTitle the title of the failure dialog
+   * @param task the task to run
+   */
+  public static void runWithProgressBar(final JComponent dialogParent, final String progressBarTitle,
+                                        final String successMessage, final String successTitle, final String failTitle,
+                                        final Runnable task) {
+    final JProgressBar bar = new JProgressBar();
+    bar.setIndeterminate(true);
+    bar.setPreferredSize(new Dimension(400, bar.getPreferredSize().height));
+    final JDialog dialog = new JDialog(UiUtil.getParentWindow(dialogParent), progressBarTitle, Dialog.ModalityType.APPLICATION_MODAL);
+    dialog.setDefaultCloseOperation(WindowConstants.DO_NOTHING_ON_CLOSE);
+    dialog.setLayout(new BorderLayout(5, 5));
+    dialog.add(bar, BorderLayout.SOUTH);
+    dialog.pack();
+    UiUtil.centerWindow(dialog);
+    SwingUtilities.invokeLater(new Runnable() {
+      @Override
+      public void run() {
+        dialog.setVisible(true);
+      }
+    });
+    //todo move UI work to EDT
+    Executors.newSingleThreadExecutor().execute(new Runnable() {
+      @Override
+      public void run() {
+        try {
+          task.run();
+          dialog.dispose();
+          if (!Util.nullOrEmpty(successMessage)) {
+            JOptionPane.showMessageDialog(UiUtil.getParentWindow(dialogParent), successMessage, successTitle, JOptionPane.INFORMATION_MESSAGE);
+          }
+        }
+        catch (Exception ex) {
+          dialog.dispose();
+          ExceptionDialog.showExceptionDialog(UiUtil.getParentWindow(dialogParent), failTitle, ex);
+        }
+      }
+    });
   }
 
   /**
